<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>990</width>
    <height>700</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>990</width>
    <height>700</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>990</width>
    <height>700</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>UTP Student Manager - Ventana Profesor</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QLabel" name="banner">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>991</width>
      <height>291</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>Img/imgPrincipal.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="logoUTP">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
      <width>111</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>../../Proyecto/Gestion_Alumnos/UI/img/icono.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="titulo2">
    <property name="geometry">
     <rect>
      <x>368</x>
      <y>425</y>
      <width>231</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
color: rgb(255, 255, 255);
background: none;</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Facilita la gestión de pagos y matrículas&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="icon1">
    <property name="geometry">
     <rect>
      <x>41</x>
      <y>379</y>
      <width>51</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background: none</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>Img/iconoPrincipal1_fondoBlanco.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="subtitulo_3">
    <property name="geometry">
     <rect>
      <x>691</x>
      <y>479</y>
      <width>241</width>
      <height>91</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
color: rgb(255, 255, 255);
background: none;</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Genera reportes completos sobre el rendimiento académico, pagos, y más, para una gestión eficiente y organizada.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>341</x>
      <y>349</y>
      <width>301</width>
      <height>251</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(0, 0, 0);
border-radius: 30px;
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="subtitulo_1">
    <property name="geometry">
     <rect>
      <x>41</x>
      <y>489</y>
      <width>261</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
background: none;
color: #E0E0E0;</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ffffff;&quot;&gt;Accede a información detallada sobre cada alumno, incluyendo calificaciones, asistencia y matrícula&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="subtitulo_2">
    <property name="geometry">
     <rect>
      <x>367</x>
      <y>469</y>
      <width>251</width>
      <height>111</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
color: rgb(255, 255, 255);
background: none;</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Los administradores pueden gestionar pagos, inscripciones y realizar un seguimiento de los estados financieros de los estudiantes&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>661</x>
      <y>349</y>
      <width>301</width>
      <height>251</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(181, 12, 47);
border-radius: 30px;
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="titulo3">
    <property name="geometry">
     <rect>
      <x>691</x>
      <y>424</y>
      <width>261</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
color: rgb(255, 255, 255);
background: none;</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Accede a informes y reportes personalizados&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="icon3">
    <property name="geometry">
     <rect>
      <x>691</x>
      <y>376</y>
      <width>41</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background: none</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>Img/iconoPrincipal3_fondoBlanco.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="titulo1">
    <property name="geometry">
     <rect>
      <x>41</x>
      <y>429</y>
      <width>261</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 25 12pt &quot;Calibri&quot;;
background: none</string>
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#ffffff;&quot;&gt;Gestiona el progreso académico de tus estudiantes&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>21</x>
      <y>349</y>
      <width>301</width>
      <height>251</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(181, 12, 47);
border-radius: 30px;
</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="icon2">
    <property name="geometry">
     <rect>
      <x>370</x>
      <y>380</y>
      <width>51</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background: none</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>Img/iconoPrincipal2_fondoBlanco.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <zorder>label_3</zorder>
   <zorder>label</zorder>
   <zorder>label_2</zorder>
   <zorder>banner</zorder>
   <zorder>logoUTP</zorder>
   <zorder>titulo2</zorder>
   <zorder>icon1</zorder>
   <zorder>subtitulo_3</zorder>
   <zorder>subtitulo_1</zorder>
   <zorder>subtitulo_2</zorder>
   <zorder>titulo3</zorder>
   <zorder>icon3</zorder>
   <zorder>titulo1</zorder>
   <zorder>icon2</zorder>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>990</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuEstudiante">
    <property name="title">
     <string>Estudiante</string>
    </property>
    <addaction name="menu_VerListaAlumnos"/>
   </widget>
   <widget class="QMenu" name="menuGesti_n_Acad_mica">
    <property name="title">
     <string>Gestión Académica</string>
    </property>
    <addaction name="menu_RegistrarCalificaciones"/>
   </widget>
   <widget class="QMenu" name="menuReportes">
    <property name="title">
     <string>Reportes</string>
    </property>
    <addaction name="menu_GenerarReporteAlumno"/>
    <addaction name="menu_GenerarReporteCalificaciones"/>
   </widget>
   <widget class="QMenu" name="menuConfiguraci_n">
    <property name="title">
     <string>Configuración</string>
    </property>
    <addaction name="menu_CerrarSesion"/>
   </widget>
   <addaction name="menuEstudiante"/>
   <addaction name="menuGesti_n_Acad_mica"/>
   <addaction name="menuReportes"/>
   <addaction name="menuConfiguraci_n"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="menu_VerListaAlumnos">
   <property name="icon">
    <iconset>
     <normaloff>Img/listaAlumnos.png</normaloff>Img/listaAlumnos.png</iconset>
   </property>
   <property name="text">
    <string>Ver Lista de Alumnos</string>
   </property>
  </action>
  <action name="menu_RegistrarCalificaciones">
   <property name="icon">
    <iconset>
     <normaloff>Img/boleta-de-calificaciones.png</normaloff>Img/boleta-de-calificaciones.png</iconset>
   </property>
   <property name="text">
    <string>Registrar Calificaciones</string>
   </property>
  </action>
  <action name="menu_GenerarReporteAlumno">
   <property name="icon">
    <iconset>
     <normaloff>Img/reporteAlumno.png</normaloff>Img/reporteAlumno.png</iconset>
   </property>
   <property name="text">
    <string>Generar Reporte de Alumno</string>
   </property>
  </action>
  <action name="menu_GenerarReporteCalificaciones">
   <property name="icon">
    <iconset>
     <normaloff>Img/reporteCalificaciones.png</normaloff>Img/reporteCalificaciones.png</iconset>
   </property>
   <property name="text">
    <string>Generar Reporte de Calificaciones</string>
   </property>
  </action>
  <action name="menu_VerPerfil">
   <property name="icon">
    <iconset>
     <normaloff>Img/perfil.png</normaloff>Img/perfil.png</iconset>
   </property>
   <property name="text">
    <string>Ver Perfil</string>
   </property>
  </action>
  <action name="menu_CerrarSesion">
   <property name="icon">
    <iconset>
     <normaloff>Img/cerrarSesion.png</normaloff>Img/cerrarSesion.png</iconset>
   </property>
   <property name="text">
    <string>Cerrar Sesión</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
